--- a/view/frontend/templates/dropCookie.phtml
+++ b/view/frontend/templates/dropCookie.phtml
@@ -7,7 +7,8 @@
 	require([ "keen" ], function(Keen) {
   		var keenClient = new Keen({
   			projectId: '53fe3c9d7d8cb9502c000000',
-  			readKey: 'a5057d538dfbe84b5283f9b34a82b1bee1e4fe5416408a2d691180efdafea1423a0161311c17e1ee25cd2f20ad7a4617989ec77ee8e97f61667bb0edc2e39d66ae5bc199dc1307339e6f50190109f4c863a40dc8508580618ffb84a63fead8f6cd954e85b4ffec8b031ff51ec5b325b8'
+  			readKey: 'a5057d538dfbe84b5283f9b34a82b1bee1e4fe5416408a2d691180efdafea1423a0161311c17e1ee25cd2f20ad7a4617989ec77ee8e97f61667bb0edc2e39d66ae5bc199dc1307339e6f50190109f4c863a40dc8508580618ffb84a63fead8f6cd954e85b4ffec8b031ff51ec5b325b8',
+  			host: "tinyrick.pixlee.com/3.0"
 		});
 
 		var setCookie = function(name, value, days) {
