--- a/view/frontend/layout/default.xml
+++ b/view/frontend/layout/default.xml
@@ -1,10 +1,8 @@
 <?xml version="1.0"?>
 <page xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:noNamespaceSchemaLocation="../../../../../../../lib/internal/Magento/Framework/View/Layout/etc/page_configuration.xsd">
 
-    <body>
-    	<referenceContainer name="main">
-            <block class="Pixlee\Pixlee\Block\Adminhtml\System\Config\Export" template="dropCookie.phtml"/>
-        </referenceContainer>
-    </body>
+    <head>
+      <script src="Pixlee_Pixlee::dropCookie.js" />
+    </head>
 
 </page>
