--- a/view/frontend/layout/default.xml
+++ b/view/frontend/layout/default.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0"?>
-<page xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:noNamespaceSchemaLocation="../../../../../../../lib/internal/Magento/Framework/View/Layout/etc/page_configuration.xsd">
+<page xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:noNamespaceSchemaLocation="urn:magento:framework:View/Layout/etc/page_configuration.xsd">
 
-    <head>
-      <script src="Pixlee_Pixlee::dropCookie.js" />
-    </head>
+  <referenceContainer name="head.additional">
+      <block class="Magento\Framework\View\Element\Template"
+             name="trackingpixel" template="Pixlee_Pixlee::pixlee/pixlee_tracking_pixel.phtml"/>
+  </referenceContainer>
 
 </page>
