--- a/view/frontend/templates/pixlee/category_gallery.phtml
+++ b/view/frontend/templates/pixlee/category_gallery.phtml
@@ -20,7 +20,7 @@ window.PixleeAsyncInit = function() {
     Pixlee.addCategoryWidget({
         widgetId: <?php echo $helper->getCDPWidgetId(); ?>,
         nativeCategoryId: <?php echo $nativeCategoryId; ?>,
-        ecomm_platform: 'magento_2'
+        ecomm_platform: 'magento'
     });
 };
 </script>
