correct demo source

--- a/view/adminhtml/templates/system/config/demo.phtml
+++ b/view/adminhtml/templates/system/config/demo.phtml
@@ -18,7 +18,7 @@ require(['prototype', 'jquery'], function () {
             method: 'post',
             url: url,
             data: {
-                source: 'magento_2',
+                source: 'magento_2_request_demo',
                 name: name,
                 email: email,
                 website: website
