--- a/view/frontend/templates/pixlee/product_gallery.phtml
+++ b/view/frontend/templates/pixlee/product_gallery.phtml
@@ -5,7 +5,7 @@ $websiteId = $helper->getWebsiteId();
 $helper->initializePixleeAPI($websiteId);
 $_product = $block->getProduct() 
 ?>
-<?php if ($helper->getPDPWidgetId() != ""): ?>
+<?php if ($helper->isActive() && $helper->getPDPWidgetId() != ""): ?>
 	<div id="pixlee_container"></div>
 	<div id="pixlee_widget_master_container"></div>
 	<script id="pixlee_script">
