--- a/view/adminhtml/templates/system/config/demo.phtml
+++ b/view/adminhtml/templates/system/config/demo.phtml
@@ -40,5 +40,4 @@ require(['prototype', 'jquery'], function () {
 });
 </script>
 
-<?php echo $block->getButtonHtml() ?>
-
+<?= $block->getButtonHtml() ?>
