--- a/view/frontend/templates/pixlee/product_gallery.phtml
+++ b/view/frontend/templates/pixlee/product_gallery.phtml
@@ -3,23 +3,23 @@
 $helper = $this->helper('Pixlee\Pixlee\Helper\Data');
 $websiteId = $helper->getWebsiteId();
 $helper->initializePixleeAPI($websiteId);
-$_product = $block->getProduct() 
+$_product = $block->getProduct();
 ?>
-<?php if ($helper->isActive() && $helper->getPDPWidgetId() != ""): ?>
-	<div id="pixlee_container"></div>
-	<div id="pixlee_widget_master_container"></div>
-	<script id="pixlee_script">
+<?php if ($helper->isActive() && $helper->getPDPWidgetId() != "") : ?>
+    <div id="pixlee_container"></div>
+    <div id="pixlee_widget_master_container"></div>
+    <script id="pixlee_script">
 
-	window.PixleeAsyncInit = function() {
-	    Pixlee.init({
-	        apiKey: '<?php echo $helper->getApiKey(); ?>'
-	    });
-	    Pixlee.addProductWidget({
-	        widgetId: <?php echo $helper->getPDPWidgetId(); ?>,
-	        skuId: '<?php echo $_product->getSku(); ?>',
-	        accountId:<?php echo $helper->getAccountId(); ?>
-	    });
-	};
-	</script>
-	<script src="https://assets.pixlee.com/assets/pixlee_widget_1_0_0.js"></script>
+    window.PixleeAsyncInit = function() {
+        Pixlee.init({
+            apiKey: '<?= /* @noEscape */ $helper->getApiKey(); ?>'
+        });
+        Pixlee.addProductWidget({
+            widgetId: <?= /* @noEscape */ $helper->getPDPWidgetId(); ?>,
+            skuId: '<?= /* @noEscape */ $_product->getSku(); ?>',
+            accountId:<?= /* @noEscape */ $helper->getAccountId(); ?>
+        });
+    };
+    </script>
+    <script src="https://assets.pixlee.com/assets/pixlee_widget_1_0_0.js"></script>
 <?php endif; ?>
