using class notation instead of string containing path to class

--- a/view/adminhtml/templates/system/config/export_button.phtml
+++ b/view/adminhtml/templates/system/config/export_button.phtml
@@ -1,5 +1,7 @@
 <?php
-$jsonHelper = $this->helper('Pixlee\Pixlee\Helper\Data');
+use Pixlee\Pixlee\Helper\Data;
+
+$jsonHelper = $this->helper(Data::class);
 ?>
 
 <script>
