--- a/view/frontend/templates/pixlee/pixlee_tracking_pixel.phtml
+++ b/view/frontend/templates/pixlee/pixlee_tracking_pixel.phtml
@@ -1,5 +1,7 @@
 <?php
-$helper = $this->helper('Pixlee\Pixlee\Helper\Data');
+use Pixlee\Pixlee\Helper\Data;
+
+$helper = $this->helper(Data::class);
 $websiteId = $helper->getWebsiteId();
 $helper->initializePixleeAPI($websiteId);
 ?>
