--- a/view/frontend/templates/pixlee/category_gallery.phtml
+++ b/view/frontend/templates/pixlee/category_gallery.phtml
@@ -14,18 +14,15 @@ $helper->initializePixleeAPI($websiteId);
 <?php if ($helper->isActive() && $helper->getCDPWidgetId() != "") : ?>
     <div id="pixlee_container"></div>
     <div id="pixlee_widget_master_container"></div>
-    <script id="pixlee_script">
-
-    window.PixleeAsyncInit = function() {
-        Pixlee.init({
-            apiKey: '<?= /* @noEscape */ $helper->getApiKey(); ?>'
+    <script id="pixlee_script" type="text/javascript">
+        require(['https://assets.pixlee.com/assets/pixlee_widget_1_0_0.js'],function (pixlee){
+            Pixlee.init({apiKey: '<?= /* @noEscape */ $helper->getApiKey(); ?>'});
+            Pixlee.addCategoryWidget({
+                widgetId: <?= /* @noEscape */ $helper->getCDPWidgetId(); ?>,
+                nativeCategoryId: <?= /* @noEscape */ $nativeCategoryId; ?>,
+                ecomm_platform: 'magento'
+            });
+            Pixlee.resizeWidget();
         });
-        Pixlee.addCategoryWidget({
-            widgetId: <?= /* @noEscape */ $helper->getCDPWidgetId(); ?>,
-            nativeCategoryId: <?= /* @noEscape */ $nativeCategoryId; ?>,
-            ecomm_platform: 'magento'
-        });
-    };
     </script>
-    <script src="https://assets.pixlee.com/assets/pixlee_widget_1_0_0.js"></script>
 <?php endif; ?>
