--- a/view/frontend/templates/pixlee/product_gallery.phtml
+++ b/view/frontend/templates/pixlee/product_gallery.phtml
@@ -8,18 +8,15 @@ $_product = $block->getProduct();
 <?php if ($helper->isActive() && $helper->getPDPWidgetId() != "") : ?>
     <div id="pixlee_container"></div>
     <div id="pixlee_widget_master_container"></div>
-    <script id="pixlee_script">
-
-    window.PixleeAsyncInit = function() {
-        Pixlee.init({
-            apiKey: '<?= /* @noEscape */ $helper->getApiKey(); ?>'
+    <script id="pixlee_script" type="text/javascript">
+        require(['https://assets.pixlee.com/assets/pixlee_widget_1_0_0.js'], function (pixlee) {
+            Pixlee.init({apiKey: '<?= /* @noEscape */ $helper->getApiKey(); ?>'});
+            Pixlee.addProductWidget({
+                widgetId: <?= /* @noEscape */ $helper->getPDPWidgetId(); ?>,
+                skuId: '<?= /* @noEscape */ $_product->getSku(); ?>',
+                accountId:<?= /* @noEscape */ $helper->getAccountId(); ?>
+            });
+            Pixlee.resizeWidget();
         });
-        Pixlee.addProductWidget({
-            widgetId: <?= /* @noEscape */ $helper->getPDPWidgetId(); ?>,
-            skuId: '<?= /* @noEscape */ $_product->getSku(); ?>',
-            accountId:<?= /* @noEscape */ $helper->getAccountId(); ?>
-        });
-    };
     </script>
-    <script src="https://assets.pixlee.com/assets/pixlee_widget_1_0_0.js"></script>
 <?php endif; ?>
