Added Block php files and updated layouts and templates to use these block files

--- a/view/adminhtml/templates/system/config/export_button.phtml
+++ b/view/adminhtml/templates/system/config/export_button.phtml
@@ -1,7 +1,5 @@
 <?php
-use Pixlee\Pixlee\Helper\Data;
-
-$jsonHelper = $this->helper(Data::class);
+$jsonHelper = $block->getDataHelper();
 ?>
 
 <script>
