--- a/view/frontend/templates/pixlee/pixlee_tracking_pixel.phtml
+++ b/view/frontend/templates/pixlee/pixlee_tracking_pixel.phtml
@@ -1,7 +1,5 @@
 <?php
-use Pixlee\Pixlee\Helper\Data;
-
-$helper = $this->helper(Data::class);
+$helper = $block->getDataHelper();
 $websiteId = $helper->getWebsiteId();
 $helper->initializePixleeAPI($websiteId);
 ?>
