--- a/view/frontend/templates/pixlee/product_gallery.phtml
+++ b/view/frontend/templates/pixlee/product_gallery.phtml
@@ -1,8 +1,6 @@
 <?php /* @var $block \Pixlee\Pixlee\Block\Gallery */?>
 <?php
-use Pixlee\Pixlee\Helper\Data;
-
-$helper = $this->helper(Data::class);
+$helper = $block->getDataHelper();
 $websiteId = $helper->getWebsiteId();
 $helper->initializePixleeAPI($websiteId);
 $_product = $block->getProduct();
