--- a/view/frontend/templates/pixlee/category_gallery.phtml
+++ b/view/frontend/templates/pixlee/category_gallery.phtml
@@ -2,7 +2,7 @@
 /**
  * Category view template
  *
- * @var $block Pixlee\Pixlee\Block\Catalog
+ * @var $block Pixlee\Pixlee\Block\CatalogWidget
  */
 ?>
 <?php
