--- a/view/frontend/templates/pixlee/product_gallery.phtml
+++ b/view/frontend/templates/pixlee/product_gallery.phtml
@@ -1,4 +1,4 @@
-<?php /* @var $block \Pixlee\Pixlee\Block\Gallery */?>
+<?php /* @var $block \Pixlee\Pixlee\Block\ProductWidget */?>
 <?php
 $helper = $block->getDataHelper();
 $websiteId = $helper->getWebsiteId();
