--- a/view/frontend/layout/catalog_product_view.xml
+++ b/view/frontend/layout/catalog_product_view.xml
@@ -6,7 +6,7 @@
     The names are a little opaque, but if you're reading this you probably know what you're doing.
     -->
     <referenceContainer name="product.info.media">
-        <block class="Pixlee\Pixlee\Block\Gallery"
+        <block class="Pixlee\Pixlee\Block\ProductWidget"
             name="product.view.community_gallery"
             template="Pixlee_Pixlee::pixlee/product_gallery.phtml"
             after="-">
