removed whitespace and made syntax changes to adhere to magento standards (#45)
* removed whitespace and syntax to adhere to magento standards

* adding simple refactoring changes (ex. whitespace removable, using === instead of is_null)

* changing functions to camel case

* rearranged args so default values are at the end

* using class notation instead of string containing path to class

* started using Magento cURL framework instead of 'discouraged' curl functions

* Added Block php files and updated layouts and templates to use these block files

* adding Pixlee custom exception and using int casting instead of intval()

* removing unused functions

* renamed block classes to be more descriptive

* removing Controller that isn't being used

* changed post request to get request and fixed save config issue

* resolved HTTP 100 response error from product exports

* removing unnecessary setOption for post fields

--- a/view/frontend/templates/pixlee/category_gallery.phtml
+++ b/view/frontend/templates/pixlee/category_gallery.phtml
@@ -2,11 +2,11 @@
 /**
  * Category view template
  *
- * @var $block \Magento\Catalog\Block\Category\View
+ * @var $block Pixlee\Pixlee\Block\CatalogWidget
  */
 ?>
 <?php
-$helper = $this->helper('Pixlee\Pixlee\Helper\Data');
+$helper = $block->getDataHelper();
 $nativeCategoryId = $block->getCurrentCategory()->getId();
 $websiteId = $helper->getWebsiteId();
 $helper->initializePixleeAPI($websiteId);
