--- a/view/frontend/templates/pixlee/product_gallery.phtml
+++ b/view/frontend/templates/pixlee/product_gallery.phtml
@@ -1,6 +1,6 @@
-<?php /* @var $block \Pixlee\Pixlee\Block\Gallery */?>
+<?php /* @var $block \Pixlee\Pixlee\Block\ProductWidget */?>
 <?php
-$helper = $this->helper('Pixlee\Pixlee\Helper\Data');
+$helper = $block->getDataHelper();
 $websiteId = $helper->getWebsiteId();
 $helper->initializePixleeAPI($websiteId);
 $_product = $block->getProduct();
