--- a/view/frontend/templates/pixlee/category_gallery.phtml
+++ b/view/frontend/templates/pixlee/category_gallery.phtml
@@ -15,7 +15,7 @@ $helper->initializePixleeAPI($websiteId);
     <div id="pixlee_container"></div>
     <div id="pixlee_widget_master_container"></div>
     <script id="pixlee_script" type="text/javascript">
-        require(['https://assets.pixlee.com/assets/pixlee_widget_1_0_0.js'],function (pixlee){
+        require(['https://assets.pxlecdn.com/assets/pixlee_widget_1_0_0.js'],function (pixlee){
             Pixlee.init({apiKey: '<?= /* @noEscape */ $helper->getApiKey(); ?>'});
             Pixlee.addCategoryWidget({
                 widgetId: <?= /* @noEscape */ $helper->getCDPWidgetId(); ?>,
