--- a/view/frontend/templates/pixlee/product_gallery.phtml
+++ b/view/frontend/templates/pixlee/product_gallery.phtml
@@ -9,7 +9,7 @@ $_product = $block->getProduct();
     <div id="pixlee_container"></div>
     <div id="pixlee_widget_master_container"></div>
     <script id="pixlee_script" type="text/javascript">
-        require(['https://assets.pixlee.com/assets/pixlee_widget_1_0_0.js'], function (pixlee) {
+        require(['https://assets.pxlecdn.com/assets/pixlee_widget_1_0_0.js'], function (pixlee) {
             Pixlee.init({apiKey: '<?= /* @noEscape */ $helper->getApiKey(); ?>'});
             Pixlee.addProductWidget({
                 widgetId: <?= /* @noEscape */ $helper->getPDPWidgetId(); ?>,
