--- a/view/frontend/templates/pixlee/pixlee_tracking_pixel.phtml
+++ b/view/frontend/templates/pixlee/pixlee_tracking_pixel.phtml
@@ -7,7 +7,9 @@ $helper->initializePixleeAPI($websiteId);
 <?php if ($helper->isActive()) : ?>
     <script type="text/javascript">
         require(["https://assets.pixlee.com/assets/pixlee_events.js"], function() {
-            window.pixlee_analytics = new Pixlee_Analytics('<?= /* @noEscape */ $helper->getApiKey(); ?>');
+        	if (typeof Pixlee_Analytics !== 'undefined') {
+	            window.pixlee_analytics = new Pixlee_Analytics('<?= /* @noEscape */ $helper->getApiKey(); ?>');
+	        }
         });
     </script>
 <?php endif; ?>
