TSD-190: Export Fix Code Refactor https://pixlee.atlassian.net/browse/TSD-190 Fixed issue getting admin website id for export; Refactored code organization; General code cleanup

--- a/view/adminhtml/templates/system/config/demo.phtml
+++ b/view/adminhtml/templates/system/config/demo.phtml
@@ -24,7 +24,7 @@ require(['prototype', 'jquery'], function () {
                 website: website
             },
             success: function (data) {
-                if (data.result === "Successful") {
+                if (data.result === 'Successful') {
                     $('pixlee_request_demo').addClassName('disabled');
                     alert('Thanks for requesting a demo. We will get in touch with you shortly.');
                 } else {
