--- a/view/frontend/layout/default.xml
+++ b/view/frontend/layout/default.xml
@@ -1,9 +1,17 @@
-<?xml version="1.0"?>
+<?xml version="1.0"?><!--
+/**
+ * Copyright © Pixlee TurnTo, Inc. All rights reserved.
+ * See COPYING.txt for license details.
+ */
+-->
 <page xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:noNamespaceSchemaLocation="urn:magento:framework:View/Layout/etc/page_configuration.xsd">
-
-  <referenceContainer name="head.additional">
-      <block class="Pixlee\Pixlee\Block\PixleeTrackingPixel"
-             name="trackingpixel" template="Pixlee_Pixlee::pixlee/pixlee_tracking_pixel.phtml"/>
-  </referenceContainer>
-
+    <body>
+        <referenceBlock name="head.additional">
+            <block name="trackingpixel" template="Pixlee_Pixlee::pixlee/pixlee_tracking_pixel.phtml">
+                <arguments>
+                    <argument name="view_model" xsi:type="object">Pixlee\Pixlee\ViewModel\ProductWidget</argument>
+                </arguments>
+            </block>
+        </referenceBlock>
+    </body>
 </page>
