--- a/view/frontend/templates/pixlee/product_gallery.phtml
+++ b/view/frontend/templates/pixlee/product_gallery.phtml
@@ -4,6 +4,7 @@
  * See COPYING.txt for license details.
  */
 /* @var \Magento\Catalog\Block\Product\View $block */
+/* @var \Magento\Framework\Escaper $escaper */
 /* @var \Pixlee\Pixlee\ViewModel\ProductWidget $viewModel */
 $viewModel = $block->getViewModel();
 $product = $block->getProduct();
@@ -11,15 +12,17 @@ $product = $block->getProduct();
 <?php if ($viewModel->isActive() && !empty($viewModel->getPDPWidgetId())) : ?>
     <div id="pixlee_container"></div>
     <div id="pixlee_widget_master_container"></div>
-    <script id="pixlee_script" type="text/javascript">
-        require(['https://assets.pxlecdn.com/assets/pixlee_widget_1_0_0.js'], function (pixlee) {
-            Pixlee.init({apiKey: '<?= /* @noEscape */ $viewModel->getApiKey(); ?>'});
-            Pixlee.addProductWidget({
-                widgetId: <?= /* @noEscape */ $viewModel->getPDPWidgetId(); ?>,
-                skuId: '<?= /* @noEscape */ $product->getSku(); ?>',
-                accountId:<?= /* @noEscape */ $viewModel->getAccountId(); ?>
-            });
-            Pixlee.resizeWidget();
-        });
+
+    <script type="text/x-magento-init">
+        {
+            "*": {
+                "Pixlee_Pixlee/js/product-widget":{
+                    "apiKey": "<?= $escaper->escapeJs($viewModel->getApiKey()) ?>",
+                    "widgetId": <?= $escaper->escapeJs($viewModel->getPDPWidgetId()) ?>,
+                    "skuId": "<?= $escaper->escapeJs($product->getSku()) ?>",
+                    "accountId": <?= $escaper->escapeJs($viewModel->getAccountId()) ?>
+                }
+            }
+        }
     </script>
 <?php endif; ?>
