TSD-190: Export Fix Code Refactor https://pixlee.atlassian.net/browse/TSD-190 Refactor admin js

--- a/view/adminhtml/templates/system/config/demo.phtml
+++ b/view/adminhtml/templates/system/config/demo.phtml
@@ -1,43 +1,16 @@
-<script>
-require(['prototype', 'jquery'], function () {
-    window.requestPixleeDemo = function(url) {
-        var name = jQuery('#pixlee_demo_not_a_customer_name').val();
-        var email = jQuery('#pixlee_demo_not_a_customer_email_address').val();
-        var website = jQuery('#pixlee_demo_not_a_customer_website').val();
+<?php
+/**
+ * Copyright © Pixlee TurnTo, Inc. All rights reserved.
+ * See COPYING.txt for license details.
+ */
+/* @var \Pixlee\Pixlee\Block\Adminhtml\System\Config\Demo $block */
+?>
 
-        if (name === '') {
-            alert('Name cannot be empty. Please try again.');
-            return;
+<script type="text/x-magento-init">
+    {
+        "*": {
+            "Pixlee_Pixlee/js/demo":{}
         }
-
-        if (email === '') {
-            alert('Email cannot be empty. Please try again.');
-            return;
-        }
-        jQuery.ajax({
-            method: 'post',
-            url: url,
-            data: {
-                source: 'magento_2_request_demo',
-                name: name,
-                email: email,
-                website: website
-            },
-            success: function (data) {
-                if (data.result === 'Successful') {
-                    $('pixlee_request_demo').addClassName('disabled');
-                    alert('Thanks for requesting a demo. We will get in touch with you shortly.');
-                } else {
-                    alert('Opps! Something went wrong. While we are working on resolving the issue, feel free to reach us at hi@pixleeteam.com');
-                }
-            },
-            error: function(data) {
-                alert('Opps! Something went wrong. While we are working on resolving the issue, feel free to reach us at hi@pixleeteam.com');
-            }
-
-        });
     }
-});
 </script>
-
 <?= $block->getButtonHtml() ?>
